# blocknet-pool

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  HOT_PATH_AUDIT_DEPLOY_PLAN.md  POOL_TEST_MATRIX.md  README.md  agent.md  build.rs  config.example.json  config.go  config_test.go  go.mod  go.sum  job.go  job_test.go  main.go  node.go  payout.go  pow.go  pow_fallback.go  pow_native.go  pow_test.go  storage.go  storage_risk_test.go  stratum.go  stratum_test.go  validation.go  validation_test.go  web.go
apps/blocknet-pool-api/: Cargo.toml  build.rs
apps/blocknet-pool-api/src/: config.rs  lib.rs  main.rs  runtime.rs
apps/blocknet-pool-monitor/: Cargo.toml
apps/blocknet-pool-monitor/src/: config.rs  lib.rs  main.rs
apps/blocknet-pool-recoveryd/: Cargo.toml
apps/blocknet-pool-recoveryd/src/: main.rs
apps/blocknet-pool-stratum/: Cargo.toml
apps/blocknet-pool-stratum/src/: main.rs
crates/pool-common/: Cargo.toml
crates/pool-common/src/: lib.rs
crates/pool-recovery/: Cargo.toml
crates/pool-recovery/src/: config.rs  lib.rs  node.rs
crates/pool-runtime/: Cargo.toml
crates/pool-runtime/src/: lib.rs
deploy/cloudflare/monitor-worker/: README.md  worker.js  wrangler.toml.example
deploy/monitoring/: monitoring.env.example
deploy/monitoring/alertmanager/: alertmanager.yml
deploy/monitoring/grafana/: grafana.ini
deploy/monitoring/grafana/dashboards/: blocknet-pool-overview.json
deploy/monitoring/grafana/provisioning/dashboards/: dashboards.yml
deploy/monitoring/prometheus/: blackbox.yml  blocknet-pool.rules.yml  prometheus.yml
deploy/nginx/: blocknet-daemon-proxy.conf
deploy/systemd/: blocknet-pool-alertmanager-discord-relay.service  blocknet-pool-api.service  blocknet-pool-monitor.service  blocknet-pool-recoveryd.service  blocknet-pool-recoveryd.socket  blocknet-pool-stratum.service  blocknetd.service  blocknetd@.service
deploy/systemd/alertmanager.service.d/: override.conf
deploy/systemd/postgresql@.service.d/: restart-blocknet-pool.conf
deploy/systemd/prometheus-blackbox-exporter.service.d/: override.conf
deploy/systemd/prometheus-node-exporter.service.d/: override.conf
deploy/systemd/prometheus.service.d/: override.conf
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: BlockStatusBadge.tsx  HashrateChart.tsx  Pager.tsx  PayoutTxLinks.tsx
frontend/src/lib/: ansi.ts  format.ts  routes.ts  seo.ts  storage.ts  theme.ts
frontend/src/pages/: AdminPage.tsx  BlocksPage.tsx  DashboardPage.tsx  LuckPage.tsx  PayoutsPage.tsx  StartPage.tsx  StatsPage.tsx  StatusPage.tsx
scripts/: alertmanager_discord_relay.py  bench_pool_ab.sh  build_blocknet_daemon.sh  check_binary_isolation.sh  ci_e2e_smoke.sh  deploy_blocknet_daemon_bntpool.sh  deploy_bntpool.sh  deploy_cloudflare_monitor_worker.sh  migrate_sqlite_to_postgres.sh  pool_load.py  provision_bntpool_monitoring.sh  provision_bntpool_recovery.sh
src/: api.rs  config.rs  db.rs  dev_fee.rs  engine.rs  jobs.rs  lib.rs  logging.rs  main.rs  monitor.rs  node.rs  payout.rs  pgdb.rs  pool_activity.rs  pow.rs  protocol.rs  recovery.rs  runtime.rs  service_state.rs  stats.rs  store.rs  stratum.rs  telemetry.rs  validation.rs
src/ui/: index.html
