[package]
name = "blocknet-pool-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
dotenvy = "0.15"
flume = "0.11"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
postgres = "0.19"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
thiserror = "2.0"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2.1"
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.10"
