[package]
name = "blocknet-pool-rs"
version = "0.1.0"
edition = "2021"

[features]
default = ["api", "stratum"]
api = []
stratum = []
monitor = []

[[bin]]
name = "blocknet-pool-api"
path = "src/bin/blocknet-pool-api.rs"
required-features = ["api"]

[[bin]]
name = "blocknet-pool-stratum"
path = "src/bin/blocknet-pool-stratum.rs"
required-features = ["stratum"]

[[bin]]
name = "blocknet-pool-monitor"
path = "src/bin/blocknet-pool-monitor.rs"
required-features = ["monitor"]

[[bin]]
name = "blocknet-pool-recoveryd"
path = "src/bin/blocknet-pool-recoveryd.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
dotenvy = "0.15"
flume = "0.11"
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
postgres = "0.19"
parking_lot = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sha3 = "0.10"
bs58 = "0.5"
hex = "0.4"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "signal", "process"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
humantime = "2.1"
urlencoding = "2.1"
sysinfo = "0.31"

[dev-dependencies]
tempfile = "3.10"
