[package]
name = "blocknet-pool-api-app"
version.workspace = true
edition.workspace = true
build = "build.rs"

[lib]
name = "blocknet_pool_api_app"
path = "src/lib.rs"

[[bin]]
name = "blocknet-pool-api"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
axum-server.workspace = true
base64.workspace = true
chrono.workspace = true
humantime.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
urlencoding.workspace = true

pool-common = { path = "../../crates/pool-common" }
pool-recovery = { path = "../../crates/pool-recovery" }
pool-runtime = { path = "../../crates/pool-runtime" }

[dev-dependencies]
tempfile.workspace = true
