[package]
name = "blocknet-pool-monitor-app"
version.workspace = true
edition.workspace = true

[lib]
name = "blocknet_pool_monitor_app"
path = "src/lib.rs"

[[bin]]
name = "blocknet-pool-monitor"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
dotenvy.workspace = true
humantime.workspace = true
libc.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

pool-common = { path = "../../crates/pool-common" }
pool-runtime = { path = "../../crates/pool-runtime" }
