[package]
name = "blocknet-pool-stratum-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "blocknet-pool-stratum"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true

pool-common = { path = "../../crates/pool-common" }
pool-runtime = { path = "../../crates/pool-runtime" }
