[package]
name = "pool-common"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
bs58.workspace = true
chrono.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
