[package]
name = "pool-recovery"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
parking_lot.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

pool-runtime = { path = "../pool-runtime" }

[dev-dependencies]
tempfile.workspace = true
