[package]
name = "pool-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
argon2.workspace = true
dotenvy.workspace = true
flume.workspace = true
hex.workspace = true
humantime.workspace = true
parking_lot.workspace = true
postgres.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sysinfo.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
urlencoding.workspace = true

pool-common = { path = "../pool-common" }

[dev-dependencies]
bs58.workspace = true
tempfile.workspace = true
